# playground

./: .gitignore  CNAME  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  terms.html
.github/workflows/: ci_workflow.yml
db_methods/: db_methods.py
src/: test_filter_tasks.py
src/playground/: __init__.py  __main__.py  http.py  test.txt
tests/: playground_test.py  test_filter_tasks.py
