[metadata]
name = playground
long_description = file: README.MD
author = denchec
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = 
    playground
install_requires =

python_requires = >= 3.10
package_dir =
    =src

[options.entry_points]
console_scripts =
    playground = playground.__main__:main
    consumer = playground.consumer_kafka:main

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=3.0.0
    flake8>=4.0

[flake8]
max-line-length = 81